--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "thegerrymanderingapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://nishatfiroj.github.io/TheGerrymanderingApp",
+  "homepage": "https://nishatfiroj.github.io/TheGerrymanderingApp/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
